tests/typing/bad/testfile-redeclared-4.go
package main

func foo() {}
func main() {}
func foo() {}
